--- a/hokuyo_node2/package.xml
+++ b/hokuyo_node2/package.xml
@@ -5,7 +5,7 @@
   <version>0.0.0</version>
   <description>Packege for Hokuyo in ros2</description>
   <maintainer email="mvcruz@cti.gov.br">discf</maintainer>
-  <license>TODO: License declaration</license>
+  <license>MIT License </license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
