--- a/hokuyo_node2/CMakeLists.txt
+++ b/hokuyo_node2/CMakeLists.txt
@@ -5,30 +5,19 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(urg_c REQUIRED)  # Add this line
 
-# Include URG Library headers
-include_directories(/usr/local/include/urg_c)
 add_executable(urg_node src/urg_node.cpp)
-ament_target_dependencies(urg_node rclcpp sensor_msgs)
-target_link_libraries(urg_node /usr/local/lib/liburg_c.a)
-install(TARGETS urg_node DESTINATION lib/${PROJECT_NAME})
+ament_target_dependencies(urg_node rclcpp sensor_msgs urg_c)  # Add urg_c here
 
+install(TARGETS urg_node DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
   set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
