--- a/hokuyo_node2/package.xml
+++ b/hokuyo_node2/package.xml
@@ -4,8 +4,8 @@
   <name>hokuyo_node2</name>
   <version>0.0.0</version>
   <description>Packege for Hokuyo in ros2</description>
-  <maintainer email="mvcruz@cti.gov.br">discf</maintainer>
-  <license>MIT License </license>
+  <maintainer email="mvcruz@cti.gov.br">Marcos Cruz</maintainer>
+  <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
