--- a/hokuyo_node2/package.xml
+++ b/hokuyo_node2/package.xml
@@ -10,6 +10,9 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   
   <depend>urg_c</depend>
+  <depend>rclcpp</depend>
+  <depend>sensor_msgs</depend>
+  
 
 
   <test_depend>ament_lint_auto</test_depend>
